regression_tests/snap/check/testsl11/testsl11.err
================================================================================

                      PROGRAM SNAP  Version 2.7.14-f90eaf0

                       Survey Network Adjustment Program

                    Copyright: Land Information New Zealand
                              Author: Chris Crook
                       Version date: Sep  8 2018 08:54:01

================================================================================
                     Run at  8-SEP-2018 09:03:50 by ccrook




================================================================================
                                                             8-SEP-2018 09:03:50

                                 ERROR SUMMARY

================================================================================

Error: Invalid "inside" option in station list requires coord sys code and wkt file name
       Line 17: File testsl11.snp

Error: The command file is not correct
