regression_tests/snap/check/testsl11/testsl11.lst
================================================================================

                      PROGRAM SNAP  Version 2.7.14-f90eaf0

                       Survey Network Adjustment Program

                    Copyright: Land Information New Zealand
                              Author: Chris Crook
                       Version date: Sep  8 2018 08:54:01

================================================================================
                     Run at  8-SEP-2018 09:03:50 by ccrook



Program options read from testsl11.snp

Job: Regression tests - station lists


Solution type: 3d coordinate adjustment


Coordinates file testsl.crd
      20 stations read

Data file 1: testsl.dat
    Observations between 2000-05-01 and 2000-05-01
      19 height differences
      20 latitudes
      20 longitudes



================================================================================
Regression tests - station lists                             8-SEP-2018 09:03:50

                                     ERRORS

================================================================================

Note: 2 errors reported in testsl11.err
